syntax = "proto3";

package raft;

service RaftService {
    rpc RequestVote(VoteRequest) returns (VoteResponse);
}

message VoteRequest {
    uint64 term = 1;
    string addr = 2;
    // TODO: lastLogIndex, lastLogTerm
}

message VoteResponse {
    uint64 term = 1;
    bool granted = 2;
}
